--- a/leaderboard.html
+++ b/leaderboard.html
@@ -87,6 +87,7 @@
 </footer>
 <script src='js/burger-menu.js'></script>
 <script src="js/cookies.js"></script>
+<script src="js/regPage.js"></script>
 <script src="js/leaderboard.js"></script>
    </body>
   
