--- a/leaderboard.html
+++ b/leaderboard.html
@@ -88,6 +88,7 @@
 <script src='js/burger-menu.js'></script>
 <script src="js/cookies.js"></script>
 <script src="js/leaderboard.js"></script>
+<script src="js/regPage.js"></script>
    </body>
   
 </html>
