--- a/app.html
+++ b/app.html
@@ -103,6 +103,7 @@
     <script src="js/cookies.js"></script>
     <script src='js/regPage.js'></script> 
     <script src='js/questionPage.js'></script>
+    <script src="js/qrCode.js"></script>
 
 </body>
 
