--- a/app.html
+++ b/app.html
@@ -108,6 +108,7 @@
     <script src="js/cookies.js"></script>
     <script src='js/regPage.js'></script> 
     <script src='js/questionPage.js'></script>
+    <script src="js/instascan.min.js"></script>
     <script src="js/qrCode.js"></script>
 
 </body>
