--- a/app.html
+++ b/app.html
@@ -7,7 +7,10 @@
     <title>Treasure Hunt</title>
     <link rel="stylesheet" type="text/css" href="css/header.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <script src="js/instascan.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 </head>
 
 <body>
@@ -50,7 +53,7 @@
         <img id="robot" src="images/logo.png" alt="logo Uni">
         <ul id="treasureHunts"></ul>
 
-        <video id="preview"></video>
+        <video id="preview" autoplay="autoplay" style="transform: scaleX(-1);" class="active"></video>
 
         <button id="CameraButton">Start Camera</button>
 
