--- a/app.html
+++ b/app.html
@@ -55,11 +55,11 @@
 
         <video id="preview" autoplay="autoplay" style="transform: scaleX(-1);" class="active"></video>
 
-        <button id="CameraButton">Start Camera</button>
+        <!---<button id="CameraButton" style="display:none">Start Camera</button>-->
 
+        <img src="images/QR_Code.png" id="CameraButton" alt="QR_Code" style="display: none;">
 
-        
-        <div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>
+        <!--<div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>-->
 
         <ul id="userInput" class="userInput" style="display: none;">
             <li>
