--- a/app.html
+++ b/app.html
@@ -50,6 +50,16 @@
 
     <main>
 
+        <div class="progress-bar">
+            <div class="progress-bar-line"></div>
+            <div class="progress-bar-point" id="point-1"></div>
+            <div class="progress-bar-point" id="point-2"></div>
+            <div class="progress-bar-point" id="point-3"></div>
+            <div class="progress-bar-point" id="point-4"></div>
+            <div class="progress-bar-point" id="point-5"></div>
+            <div class="progress-bar-point" id="point-6"></div>
+        </div>
+
         <img id="robot" src="images/logo.png" alt="logo Uni">
         <ul id="treasureHunts"></ul>
 
