--- a/app.html
+++ b/app.html
@@ -51,7 +51,7 @@
     <main>
         <img id="robot" src="images/logo.png" alt="logo Uni">
 
-        <div class="progress-bar">
+        <div class="progress-bar" style="display: none;">
             <div class="progress-bar-line"></div>
             <div class="progress-bar-point" id="point-1"></div>
             <div class="progress-bar-point" id="point-2"></div>
